--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p style="text-align:center">
                   <a href="https://github.com/Maikouuu">Github</a>  &nbsp;/&nbsp;
                   <a href="mailto:zhaozb@shanghaitech.edu.cn">Email</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/Maikouuu">CV</a> &nbsp;/&nbsp;
+                  <a href="https://github.com/Maikouuu">CV</a>;
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
