--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <br>
         <a href="https://github.com/tb2-sy">Shuo Wang</a>,
         <a href="https://lijing1996.github.io">Jing Li</a>,
-        <strong>Zibo Zhao</strong>
+        <strong>Zibo Zhao</strong>,
         <a href="https://dongzelian.com">Dongze Lian</a>,
         <a href="https://github.com/hbb1">Binbin Huang</a>,
         <a href="">Xiaomei Wang</a>,
@@ -166,7 +166,7 @@
         </a>
         <br>
         <a href="https://github.com/zhao-yiqun">Yiqun Zhao</a>,
-        <strong>Zibo Zhao</strong>
+        <strong>Zibo Zhao</strong>,
         <a href="https://lijing1996.github.io">Jing Li</a>,
         <a href="https://github.com/Ironieser">Sixun Dong</a>,
         <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>
