--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <a href=""> Zhibin Wang </a>,
         <a href=""> Bin Fu </a>,
         <a href="https://april.zju.edu.cn/team/dr-yong-liu/"> Yong Liu </a>
-        <a href="https://www.skicyyu.org/"> Gang Yu </a>,
+        <a href="https://www.skicyyu.org/"> Gang Yu </a>
         <br>
         <em>prePrint</em>, 2023
         <br>
