--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             <tr onmouseout="pag_stop()" onmouseover="pag_start()" bgcolor="#ffffd0">
               <td style="padding:20px;width:25%;vertical-align:middle">
                 <div class="one">
-                  <div class="two" id='pag_image'><video  width=100% muted autoplay loop>
+                  <div class="two" id='pag_image'><video  width=100% height=100% muted autoplay loop>
                   <source src="images/pag/pag.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video></div>
-                  <img src='images/pag/pag.png' width="100%">
+                  <img src='images/pag/pag.png' width="100%" style="margin-top: 25%;">
                 </div>
                 <script type="text/javascript">
                   function pag_start() {
@@ -97,8 +97,8 @@
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
           <div class="two" id='tsp'>
-            <img src='images/tsp/tsppipeline.png' width="160"></div>
-          <img src='images/tsp/tspteaser.png' width="160">
+            <img src='images/tsp/tsppipeline.png' width=100% style="margin-top: 25%;"></div>
+          <img src='images/tsp/tspteaser.png' width=100% style="margin-top: 25%;">
         </div>
         <script type="text/javascript">
           function tsp_start() {
@@ -143,11 +143,11 @@
     <tr onmouseout="roomdesigner_stop()" onmouseover="roomdesigner_start()">
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='roomdesigner_image'><video  width=100% muted autoplay loop>
+          <div class="two" id='roomdesigner_image'><video  width=100% height=100% muted autoplay loop>
           <source src="images/roomdesigner/roomdesigner.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
-          <img src='images/roomdesigner/roomdesigner.png' width=100%>
+          <img src='images/roomdesigner/roomdesigner.png' width="100%" style="margin-top: 20%;">
         </div>
         <script type="text/javascript">
           function roomdesigner_start() {
@@ -188,11 +188,11 @@
     <tr onmouseout="paint_stop()" onmouseover="paint_start()" bgcolor="#ffffd0">
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='paint_image'><video  width=100% muted autoplay loop>
+          <div class="two" id='paint_image'><video  width=100% height=100% muted autoplay loop>
           <source src="images/paint/paint.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
-          <img src='images/paint/paint.png' width="100%">
+          <img src='images/paint/paint.png' width="100%" style="margin-top: 26%;">
         </div>
         <script type="text/javascript">
           function paint_start() {
@@ -239,8 +239,8 @@
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
           <div class="two" id='shapegpt_image'>
-            <img src='images/shapegpt/shapegptnetwork.png' width="160"></div>
-          <img src='images/shapegpt/shapegptteaser.png' width="160">
+            <img src='images/shapegpt/shapegptnetwork.png' width="100%" style="margin-top: 25%;"></div>
+          <img src='images/shapegpt/shapegptteaser.png' width="100%" style="margin-top: 25%;">
         </div>
         <script type="text/javascript">
           function shapegpt_start() {
@@ -286,11 +286,11 @@
     <tr onmouseout="michelangelo_stop()" onmouseover="michelangelo_start()" bgcolor="#ffffd0">
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
-          <div class="two" id='michelangelo_image'><video  width=100% muted autoplay loop>
+          <div class="two" id='michelangelo_image'><video  width=100% height=100% muted autoplay loop>
           <source src="images/michelangelo/michelangelo.mp4" type="video/mp4">
           Your browser does not support the video tag.
           </video></div>
-          <img src='images/michelangelo/michelangelo.png' width="100%">
+          <img src='images/michelangelo/michelangelo.png' width="100%" style="margin-top: 26.3%;">
         </div>
         <script type="text/javascript">
           function michelangelo_start() {
@@ -341,8 +341,8 @@
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
           <div class="two" id='magictailor_image'>
-            <img src='images/magictailor/magictailornetwork.png' width="160"></div>
-          <img src='images/magictailor/magictailorteaser.png' width="160">
+            <img src='images/magictailor/magictailornetwork.png' width="100%" style="margin-top: 30%;"></div>
+          <img src='images/magictailor/magictailorteaser.png' width="100%" style="margin-top: 35%;">
         </div>
         <script type="text/javascript">
           function magictailor_start() {
@@ -382,8 +382,8 @@
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
           <div class="two" id='pbhc_image'>
-            <img src='images/pbhc/pbhcnetwork.png' width="160"></div>
-          <img src='images/pbhc/pbhcteaser.png' width="160">
+            <img src='images/pbhc/pbhcnetwork.png' width="100%" style="margin-top: 15%;"></div>
+          <img src='images/pbhc/pbhcteaser.png' width="100%" style="margin-top: 15%;">
         </div>
         <script type="text/javascript">
           function pbhc_start() {
