--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </td>
     </tr>
 	
-    <tr onmouseout="paint_stop()" onmouseover="paint_start()" bgcolor="#ffffd0">
+    <tr onmouseout="paint_stop()" onmouseover="paint_start()">
       <td style="padding:20px;width:25%;vertical-align:middle">
         <div class="one">
           <div class="two" id='paint_image'><video  width=100% height=100% muted autoplay loop>
