--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                    Currently, I am a research intern at Tencent. 
                    Previously, I worked with 
                    Dr. <a href="https://github.com/StevenLiuWen"> Wen Liu </a>, 
-                   <a href="https://chenxin.tech/"> Xin Chen </a>, and 
+                   Dr. <a href="https://chenxin.tech/"> Xin Chen </a>, and 
                    Dr. <a href="https://www.skicyyu.org/"> Gang YU </a>. </p>
                 <p style="text-align:center">
                   <a href="https://github.com/Maikouuu">Github</a>  &nbsp;/&nbsp;
