--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <br>
                 <strong>Zibo Zhao</strong> is one of the contributors.
                 <br>
-                <em>prePrint</em>, 2025
+                <em>Technique Report</em>, 2025
                 <br>
                 <a href="https://arxiv.org/abs/2501.12202">arxiv</a>
                 /
