--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
         <a href=""> Taihao Li </a>,
         <a href="https://eetchen.github.io/"> Tao Chen </a>
         <br>
-        <em>prePrint</em>, 2023
+        <em>TMM</em>, 2025
         <br>
         <a href="https://github.com/OpenShapeLab/ShapeGPT">project page</a>
         /
@@ -608,7 +608,6 @@
         <em>prePrint</em>, 2023
         <br>
         <a href="data/magictarlor/magictailor.pdf">paper</a>
-        /
         <p></p>
         <p>
          
