--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                    Dr. <a href="https://www.skicyyu.org/"> Gang YU </a>. </p>
                 <p style="text-align:center">
                   <a href="https://github.com/Maikouuu">Github</a>  &nbsp;/&nbsp;
-                  <a href="mailto:zhaozb@shanghaitech.edu.cn">Email</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/Maikouuu">CV</a>
+                  <a href="mailto:zhaozb@shanghaitech.edu.cn">Email</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
