--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </script>
               </td>
               <td style="padding:20px;width:75%;vertical-align:middle">
-                <a href="https://arxiv.org/pdf/2501.12202">
+                <a href="https://arxiv.org/abs/2501.12202">
               <span class="papertitle"> Hunyuan3D 2.0: Scaling Diffusion Models for High Resolution Textured 3D Assets Generation
               </span>
                 </a>
