--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </span>
                 </a>
                 <br>
-                <a href="https://davidxu-jj.github.io/"> Haohan Weng </a>,
+                <a href="https://whaohan.github.io/"> Haohan Weng </a>,
                 <strong>Zibo Zhao</strong>,
                 <a href="https://scholar.google.com/citations?user=5d5Y9BoAAAAJ&hl=zh-CN"> Biwen Lei </a>,
                 <a href="https://scholar.google.com.hk/citations?user=e9EzzWAAAAAJ&hl=zh-CN"> Xianghui Yang </a>,
