--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Zibo Zhao
                 </p>
-                <p>I am a last-year Ph.D student from <a href="https://svip-lab.github.io/index.html"> SVIP Lab </a> at ShanghaiTech University, 
+                <p>I am a last-year Ph.D student from ShanghaiTech University, 
                    advised by Prof. <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>.
                    I received my bachelor's degree from ShanghaiTech University as well.
                    Currently, I am a research intern at Tencent. 
