--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <a href=""> Yuhong Liu </a>,
                 <a href=""> Jie Jiang </a>,
                 <a href=""> Chunchao Guo </a>,
-                <a href="https://scholar.google.com/citations?user=-neWbpUAAAAJ&hl=zh-CN">Tong Zhang</a>
-                <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>
+                <a href="https://scholar.google.com/citations?user=-neWbpUAAAAJ&hl=zh-CN">Tong Zhang</a>,
+                <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>,
                 <a href="https://scholar.google.com/citations?user=Q5248zwAAAAJ&hl=zh-CN"> C. L. Philip Chen </a>
                 <br>
                 <em>prePrint</em>, 2025
