--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                    I received my bachelor's degree from ShanghaiTech University as well.
                    Currently, I am a research intern at Tencent. 
                    Previously, I worked with 
-                   Dr. <a href="https://github.com/StevenLiuWen"> Wen Liu </a>, 
-                   Dr. <a href="https://chenxin.tech/"> Xin Chen </a>, and 
-                   Dr. <a href="https://www.skicyyu.org/"> Gang YU </a>. </p>
+                   Dr. <a href="https://github.com/StevenLiuWen">Wen Liu</a>, 
+                   Dr. <a href="https://chenxin.tech/">Xin Chen</a>, and 
+                   Dr. <a href="https://www.skicyyu.org/">Gang YU</a>. </p>
                 <p style="text-align:center">
                   <a href="https://github.com/Maikouuu">Github</a>  &nbsp;/&nbsp;
                   <a href="mailto:zhaozb@shanghaitech.edu.cn">Email</a>
@@ -117,19 +117,19 @@
               </span>
                 </a>
                 <br>
-                <a href="https://whaohan.github.io/"> Haohan Weng </a>,
+                <a href="https://whaohan.github.io/">Haohan Weng</a>,
                 <strong>Zibo Zhao</strong>,
-                <a href="https://scholar.google.com/citations?user=5d5Y9BoAAAAJ&hl=zh-CN"> Biwen Lei </a>,
-                <a href="https://scholar.google.com.hk/citations?user=e9EzzWAAAAAJ&hl=zh-CN"> Xianghui Yang </a>,
-                <a href="https://hitcslj.github.io/"> Jian Liu </a>,
+                <a href="https://scholar.google.com/citations?user=5d5Y9BoAAAAJ&hl=zh-CN">Biwen Lei</a>,
+                <a href="https://scholar.google.com.hk/citations?user=e9EzzWAAAAAJ&hl=zh-CN">Xianghui Yang</a>,
+                <a href="https://hitcslj.github.io/">Jian Liu</a>,
                 <a href="https://zeqiang-lai.github.io/">Zeqiang Lai</a>,
                 <a href="https://openreview.net/profile?id=~Zhuo_Chen5">Zhuo Chen</a>,
-                <a href=""> Yuhong Liu </a>,
-                <a href=""> Jie Jiang </a>,
-                <a href=""> Chunchao Guo </a>,
+                <a href="">Yuhong Liu</a>,
+                <a href="">Jie Jiang</a>,
+                <a href="">Chunchao Guo</a>,
                 <a href="https://scholar.google.com/citations?user=-neWbpUAAAAJ&hl=zh-CN">Tong Zhang</a>,
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>,
-                <a href="https://scholar.google.com/citations?user=Q5248zwAAAAJ&hl=zh-CN"> C. L. Philip Chen </a>
+                <a href="https://scholar.google.com/citations?user=Q5248zwAAAAJ&hl=zh-CN">C. L. Philip Chen</a>
                 <br>
                 <em>prePrint</em>, 2025
                 <br>
@@ -171,10 +171,10 @@
               </span>
                 </a>
                 <br>
-                <a href="https://davidxu-jj.github.io/"> Jingwei Xu </a>,
-                <a href="https://scholar.google.com/citations?user=ZkCLeicAAAAJ&hl=en"> Chenyu Wang </a>,
+                <a href="https://davidxu-jj.github.io/">Jingwei Xu</a>,
+                <a href="https://scholar.google.com/citations?user=ZkCLeicAAAAJ&hl=en">Chenyu Wang</a>,
                 <strong>Zibo Zhao</strong>,
-                <a href="https://github.com/StevenLiuWen"> Wen Liu </a>,
+                <a href="https://github.com/StevenLiuWen">Wen Liu</a>,
                 <a href="https://scholar.google.com/citations?user=XqLiBQMAAAAJ&hl=en">Yi Ma</a>,
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>
                 <br>
@@ -216,14 +216,14 @@
               </span>
                 </a>
                 <br>
-                <a href="https://patrickddj.github.io/Home/"> Dadong Jiang </a>,
-                <a href="https://scholar.google.com.hk/citations?user=e9EzzWAAAAAJ&hl=zh-CN"> Xianghui Yang </a>,
+                <a href="https://patrickddj.github.io/Home/">Dadong Jiang</a>,
+                <a href="https://scholar.google.com.hk/citations?user=e9EzzWAAAAAJ&hl=zh-CN">Xianghui Yang</a>,
                 <strong>Zibo Zhao</strong>,
-                <a href=""> Sheng Zhang </a>,
-                <a href=""> Jiaao Yu </a>,
+                <a href="">Sheng Zhang</a>,
+                <a href="">Jiaao Yu</a>,
                 <a href="https://zeqiang-lai.github.io/">Zeqiang Lai</a>,
-                <a href=""> Shaoxiong Yang </a>,
-                <a href=""> Chunchao Guo </a>,
+                <a href="">Shaoxiong Yang</a>,
+                <a href="">Chunchao Guo</a>,
                 <a href="https://scholar.google.com/citations?user=oA7bk2AAAAAJ&hl=zh-CN">Xiaobo Zhou</a>,
                 <a href="https://ieeexplore.ieee.org/author/37089680837">Zhihui Ke</a>
                 <br>
@@ -265,14 +265,14 @@
               </span>
                 </a>
                 <br>
-                <a href="https://github.com/LiuShiyu95"> Shiyu Liu </a>,
+                <a href="https://github.com/LiuShiyu95">Shiyu Liu</a>,
                 <strong>Zibo Zhao</strong>,
-                <a href="https://scholar.google.com/citations?user=-LATi7MAAAAJ&hl=zh-CN"> Yihao Zhi </a>,
+                <a href="https://scholar.google.com/citations?user=-LATi7MAAAAJ&hl=zh-CN">Yihao Zhi</a>,
                 <a href="https://github.com/zhao-yiqun">Yiqun Zhao</a>,
-                <a href="https://github.com/hbb1"> Binbin Huang </a>
+                <a href="https://github.com/hbb1">Binbin Huang</a>
                 <a href="https://github.com/tb2-sy">Shuo Wang</a>,
                 <a href="https://scholar.google.com/citations?user=V5H0P28AAAAJ">Ruoyu Wang</a>,
-                <a href=""> Michael Xuan </a>,
+                <a href="">Michael Xuan</a>,
                 <a href="https://scholar.google.com/citations?user=7wslizAAAAAJ&hl=en">Zhengxin Li</a>,
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>
                 <br>
@@ -316,15 +316,15 @@
       </span>
         </a>
         <br>
-        <a href="https://github.com/Zzlongjuanfeng"> Xianfang Zeng </a>,
-        <a href="https://chenxin.tech/"> Xin Chen </a>,
-        <a href="https://qzq2514.github.io"> Zhongqi Qi </a>,
-        <a href="https://github.com/StevenLiuWen"> Wen Liu </a>,
+        <a href="https://github.com/Zzlongjuanfeng">Xianfang Zeng</a>,
+        <a href="https://chenxin.tech/">Xin Chen</a>,
+        <a href="https://qzq2514.github.io">Zhongqi Qi</a>,
+        <a href="https://github.com/StevenLiuWen">Wen Liu</a>,
         <strong>Zibo Zhao</strong>,
-        <a href=""> Zhibin Wang </a>,
-        <a href=""> Bin Fu </a>,
-        <a href="https://april.zju.edu.cn/team/dr-yong-liu/"> Yong Liu </a>
-        <a href="https://www.skicyyu.org/"> Gang Yu </a>
+        <a href="">Zhibin Wang</a>,
+        <a href="">Bin Fu</a>,
+        <a href="https://april.zju.edu.cn/team/dr-yong-liu/">Yong Liu</a>,
+        <a href="https://www.skicyyu.org/">Gang Yu</a>
         <br>
         <em>CVPR</em>, 2024
         <br>
@@ -367,11 +367,12 @@
                 </a>
                 <br>
                 <strong>Zibo Zhao</strong>,
-                <a href="https://github.com/StevenLiuWen"> Wen Liu </a>,
-                <a href="https://chenxin.tech/"> Xin Chen </a>,
-                <a href="https://github.com/Zzlongjuanfeng"> Xianfang Zeng </a>,
-                <a href="https://github.com/LiuShiyu95"> Shiyu Liu </a>,
-                <a href="https://www.skicyyu.org/"> Gang Yu </a>,
+                <a href="https://github.com/StevenLiuWen">Wen Liu</a>,
+                <a href="https://chenxin.tech/">Xin Chen</a>,
+                <a href="https://github.com/Zzlongjuanfeng">Xianfang Zeng</a>,
+                <a href="https://github.com/LiuShiyu95">Shiyu Liu</a>,
+                <a href="https://fukunyin.github.io">Fukun Yin</a>,
+                <a href="https://www.skicyyu.org/">Gang Yu</a>,
                 <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>
                 <br>
                 <em>prePrint</em>, 2024
@@ -496,15 +497,15 @@
       </span>
         </a>
         <br>
-        <a href="https://fukunyin.github.io"> Fukun Yin </a>,
-        <a href="https://chenxin.tech/"> Xin Chen </a>,
-        <a href="https://icoz69.github.io"> Chi Zhang </a>,
-        <a href="https://www.biaojiang.tech"> Biao Jiang </a>,
+        <a href="https://fukunyin.github.io">Fukun Yin</a>,
+        <a href="https://chenxin.tech/">Xin Chen</a>,
+        <a href="https://icoz69.github.io">Chi Zhang</a>,
+        <a href="https://www.biaojiang.tech">Biao Jiang</a>,
         <strong>Zibo Zhao</strong>,
-        <a href="https://scholar.google.com.hk/citations?user=gsLd2ccAAAAJ&hl=zh-CN"> Jiayuan Fan </a>,
-        <a href="https://www.skicyyu.org/"> Gang Yu </a>,
-        <a href=""> Taihao Li </a>,
-        <a href="https://eetchen.github.io/"> Tao Chen </a>
+        <a href="https://scholar.google.com.hk/citations?user=gsLd2ccAAAAJ&hl=zh-CN">Jiayuan Fan</a>,
+        <a href="https://www.skicyyu.org/">Gang Yu</a>,
+        <a href="">Taihao Li</a>,
+        <a href="https://eetchen.github.io/">Tao Chen</a>
         <br>
         <em>TMM</em>, 2025
         <br>
@@ -546,14 +547,14 @@
         </a>
         <br>
         <strong>Zibo Zhao</strong>,
-        <a href="https://github.com/StevenLiuWen"> Wen Liu </a>,
-        <a href="https://chenxin.tech/"> Xin Chen </a>,
-        <a href="https://github.com/Zzlongjuanfeng"> Xianfang Zeng </a>,
-        <a href="https://wrong.wang/"> Rui Wang </a>,
-        <a href=""> Per Cheng </a>,
-        <a href=""> Bin Fu </a>,
-        <a href="https://eetchen.github.io/"> Tao Chen </a>,
-        <a href="https://www.skicyyu.org/"> Gang Yu </a>,
+        <a href="https://github.com/StevenLiuWen">Wen Liu</a>,
+        <a href="https://chenxin.tech/">Xin Chen</a>,
+        <a href="https://github.com/Zzlongjuanfeng">Xianfang Zeng</a>,
+        <a href="https://wrong.wang/">Rui Wang</a>,
+        <a href="">Pei Cheng</a>,
+        <a href="">Bin Fu</a>,
+        <a href="https://eetchen.github.io/">Tao Chen</a>,
+        <a href="https://www.skicyyu.org/">Gang Yu</a>,
         <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>
         <br>
         <em>NeurIPS</em>, 2023
@@ -599,9 +600,9 @@
         </a>
         <br>
         <strong>Zibo Zhao</strong>,
-        <a href="https://github.com/StevenLiuWen"> Wen Liu </a>,
-        <a href="https://chenxin.tech/"> Xin Chen </a>,
-        <a href="https://www.skicyyu.org/"> Gang Yu </a>,
+        <a href="https://github.com/StevenLiuWen">Wen Liu</a>,
+        <a href="https://chenxin.tech/">Xin Chen</a>,
+        <a href="https://www.skicyyu.org/">Gang Yu</a>,
         <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>
         <br>
         <em>prePrint</em>, 2023
@@ -639,14 +640,14 @@
         </a>
         <br>
         <strong>Zibo Zhao</strong>,
-        <a href="https://github.com/StevenLiuWen"> Wen Liu </a>,
-        <a href="https://scholar.google.com/citations?user=Y3hU1AYAAAAJ&hl=en"> Yanyu Xu </a>,
-        <a href="https://www.linkedin.com/in/xianing-chen-0b2695183"> Xianing Chen </a>,
-        <a href="https://zachluo.github.io/"> Weixin Luo </a>,
-        <a href="https://github.com/rxqy"> Lei Jin </a>,
-        <a href=""> Bohui Zhu </a>,
-        <a href=""> Tong Liu </a>,
-        <a href=""> Binqiang Zhao </a>,
+        <a href="https://github.com/StevenLiuWen">Wen Liu</a>,
+        <a href="https://scholar.google.com/citations?user=Y3hU1AYAAAAJ&hl=en">Yanyu Xu</a>,
+        <a href="https://www.linkedin.com/in/xianing-chen-0b2695183">Xianing Chen</a>,
+        <a href="https://zachluo.github.io/">Weixin Luo</a>,
+        <a href="https://github.com/rxqy">Lei Jin</a>,
+        <a href="">Bohui Zhu</a>,
+        <a href="">Tong Liu</a>,
+        <a href="">Binqiang Zhao</a>,
         <a href="https://scholar.google.com/citations?hl=zh-CN&user=fe-1v0MAAAAJ">Shenghua Gao</a>
         <br>
         <em>CVPR</em>, 2021
